[package]
name = "cryo"
version = "0.1.6"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/cryo"
description = """
Extend the lifetime of a reference. Safely.
"""
keywords = ["lifetime", "ownership", "reference"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
lock_api = { version = "0.4.2", optional = true }
stable_deref_trait = "1.1.1"

[package.metadata.docs.rs]
all-features = true
