[package]
name = "cryo"
version = "0.3.1"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/cryo"
description = """
Extend the lifetime of a reference. Safely.
"""
keywords = ["lifetime", "ownership", "reference"]
categories = ["rust-patterns", "no-std"]
edition = "2018"

exclude = [
    "/doc/*.pml",
    "/README.tpl",
]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["atomic", "std"]
std = []
atomic = []

[dependencies]
lock_api = { version = "0.4.2", optional = true }
stable_deref_trait = { version = "1.1.1", default-features = false }
pin-utils = "0.1.0"

[dev-dependencies]
futures = "0.3.16"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
